# homelab-monitoring-agent

./: .gitignore  Dockerfile  Dockerfile-agent  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-multi-arch.yml  sync-readme.yml
agent/: README.md  pyproject.toml  run.sh  sample_db-credentials.txt  sample_env
agent/homelab_monitoring_agent/: available_modules.py  config_keys.py  configuration.py  db.py  disk_space_monitor.py  monitor.py  monitor_module.py
db/: disk_space.sql  host.sql  monitoring.sql
homelab_monitoring/: db.py  disk_space_monitor.py  monitor.py  run.sh  sample_env
